# AMC-BC-protein-digger

./: README.md  main.py  pyproject.toml  run.sh
config/: config.yaml
dst/: example_dataset.csv  example_dataset.pkl
generate_genepool/: genepool_generator.py  mean_gene_pool.py
model/: model.py
ranker/: get_antibody_ranking.py
src/: result_example.yaml
utils/: dataframe_utils.py  input.py  output.py  paired_df_dcls.py
validate_geneset/: filter_geneset.py  get_geneset.py
